package seminar3Dz.Srp;

public class Calculator {
    public int add(int a, int b) {
        return a + b;
    }
}
