package seminar3Dz.Srp;

public class Logger {
    public void log(String message) {
        System.out.println(message);
    }
}
